--- a/Firmware/FW_Feinstaubmessung/FW_Feinstaubmessung.ioc
+++ b/Firmware/FW_Feinstaubmessung/FW_Feinstaubmessung.ioc
@@ -12,28 +12,26 @@ Mcu.IP6=USART2
 Mcu.IPNb=7
 Mcu.Name=STM32L476R(C-E-G)Tx
 Mcu.Package=LQFP64
-Mcu.Pin0=PC14-OSC32_IN (PC14)
-Mcu.Pin1=PC15-OSC32_OUT (PC15)
-Mcu.Pin10=PA7
-Mcu.Pin11=PC7
-Mcu.Pin12=PC9
-Mcu.Pin13=PA8
-Mcu.Pin14=PA9
-Mcu.Pin15=PA10
-Mcu.Pin16=PA13 (JTMS-SWDIO)
-Mcu.Pin17=PA14 (JTCK-SWCLK)
-Mcu.Pin18=PB6
-Mcu.Pin19=VP_SYS_VS_Systick
-Mcu.Pin2=PH0-OSC_IN (PH0)
-Mcu.Pin20=VP_TIM4_VS_no_output1
-Mcu.Pin3=PH1-OSC_OUT (PH1)
-Mcu.Pin4=PA0
-Mcu.Pin5=PA1
-Mcu.Pin6=PA2
-Mcu.Pin7=PA3
-Mcu.Pin8=PA5
-Mcu.Pin9=PA6
-Mcu.PinsNb=21
+Mcu.Pin0=PH0-OSC_IN (PH0)
+Mcu.Pin1=PH1-OSC_OUT (PH1)
+Mcu.Pin10=PC9
+Mcu.Pin11=PA8
+Mcu.Pin12=PA9
+Mcu.Pin13=PA10
+Mcu.Pin14=PA13 (JTMS-SWDIO)
+Mcu.Pin15=PA14 (JTCK-SWCLK)
+Mcu.Pin16=PB6
+Mcu.Pin17=VP_SYS_VS_Systick
+Mcu.Pin18=VP_TIM4_VS_no_output1
+Mcu.Pin2=PA0
+Mcu.Pin3=PA1
+Mcu.Pin4=PA2
+Mcu.Pin5=PA3
+Mcu.Pin6=PA5
+Mcu.Pin7=PA6
+Mcu.Pin8=PA7
+Mcu.Pin9=PC7
+Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L476RGTx
@@ -87,10 +85,6 @@ PB6.GPIOParameters=GPIO_Label
 PB6.GPIO_Label=NSS
 PB6.Locked=true
 PB6.Signal=GPIO_Output
-PC14-OSC32_IN\ (PC14).Mode=LSE-External-Oscillator
-PC14-OSC32_IN\ (PC14).Signal=RCC_OSC32_IN
-PC15-OSC32_OUT\ (PC15).Mode=LSE-External-Oscillator
-PC15-OSC32_OUT\ (PC15).Signal=RCC_OSC32_OUT
 PC7.GPIOParameters=GPIO_Label
 PC7.GPIO_Label=RST
 PC7.Locked=true
@@ -155,11 +149,12 @@ RCC.HSI_VALUE=16000000
 RCC.I2C1Freq_Value=72000000
 RCC.I2C2Freq_Value=72000000
 RCC.I2C3Freq_Value=72000000
-RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,DFSDMFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSI_VALUE,MCO1PinFreq_Value,MSI_VALUE,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSAI2PoutputFreq_Value,PLLSAI2RoutputFreq_Value,PLLSourceVirtual,PREFETCH_ENABLE,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,VCOSAI2OutputFreq_Value
+RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,DFSDMFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MSI_VALUE,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSAI2PoutputFreq_Value,PLLSAI2RoutputFreq_Value,PLLSourceVirtual,PREFETCH_ENABLE,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,VCOSAI2OutputFreq_Value
 RCC.LPTIM1Freq_Value=72000000
 RCC.LPTIM2Freq_Value=72000000
 RCC.LPUART1Freq_Value=72000000
 RCC.LSCOPinFreq_Value=32000
+RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
 RCC.MCO1PinFreq_Value=72000000
 RCC.MSI_VALUE=4000000
@@ -209,6 +204,8 @@ TIM4.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
 TIM4.IPParameters=Prescaler,Period,Channel-Output Compare1 No Output
 TIM4.Period=65535-1
 TIM4.Prescaler=2250-1
+UART4.BaudRate=9600
+UART4.IPParameters=BaudRate
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
